Some improvements. Music still buggy but working to fix all.